--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.dark p
+{
+  color: #ffff;
+}
+
+div,
+span {
+  color: black;
+}
+
+h3{
+  color: #A1A1AA;
+}
+
+/* main{
+
+    background-color: grey;
+
+} */
